fix/overflow x

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,13 +1,11 @@
 @import "form.css";
 
-html{
-  width: 100vw;
-  margin: auto;
-}
 
 body {
   margin: 0px;
   padding: 0px;
 
   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+
+  overflow-x: hidden;
 }
